--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -2,7 +2,7 @@
 layout: default
 modal-id: 2
 date: 2022-04-11
-img: project2.png
+img: thumbnail2.png
 alt: image-alt
 project-date: April 2022
 client: Academy
