--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -2,7 +2,7 @@
 layout: default
 modal-id: 1
 date: 2022-02-01
-img: project1.png
+img: thumbnail1.png
 alt: image-alt
 project-date: February 2022
 client: Academy
