--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -2,7 +2,7 @@
 layout: default
 modal-id: 4
 date: 2022-09-01
-img: thumbnail4.png
+img: thumbnail4
 alt: image-alt
 project-date: September 2022
 client: MetaTrend Academy
