--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -7,5 +7,5 @@ alt: image-alt
 project-date: February 2022
 client: Academy
 title: CRUD
-description: Use this area of the page to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.
+description: 프로젝트의 목적은 간단한 CRUD 였으며,  JS 로 프론트를 구축하는 작업을 저에게 할당했습니다.  다만, 팀장으로서 역할 부재로 인해, 일정이 밀리게 되었고 좋은 퀄리티가 나오지 못했습니다.  nodeJS 로 front,back 을 구축해 작업했습니다.  로그인/로그아웃, 회원가입, 기능은 완벽했지만, 제 팀장 역할의 부재로 프로젝트 일정을 못 맞춰서, 게시판 기능이 부족한 상태로 마무리하게 되었습니다.
 ---
