--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -8,5 +8,5 @@ alt: image-alt
 project-date: September 2022
 client: MetaTrend Academy
 title: NFTunes
-description: 마지막으로 기업협약으로 진행한 학원 프로젝트인 dappTunes 입니다. 음원을 nft 토큰으로 치환하여, 음원재생으로 발생하는 수익을 토큰의 소유자가 100% 가져갈수 있도록 구상했습니다. 이력서에 기술된 모든 스택을 사용했으며, docker를 이용한 private network 개발구축, erc-721 표준을 사용해 토큰 제작/소거 를 가능하게 하는 등 사용할 수 있는 모든 기술로 가장 자신있는 작업물이라 말씀드릴수있습니다. 프로젝트의 자세한 내용은 이력서를 참고해주세요.
+description: 마지막으로 기업협약으로 진행한 학원 프로젝트인 dappTunes 입니다. 음원을 nft 토큰으로 치환하여, 음원재생으로 발생하는 수익을 토큰의 소유자가 100% 가져갈수 있도록 구상했습니다. 이력서에 기술된 모든 스택을 사용했으며, docker를 이용한 private network 개발구축, erc-721 표준을 사용해 토큰 제작/소거 를 가능하게 하는 등 사용할 수 있는 모든 기술로 만든 제일 자신있는 작업물이라 말씀드릴 수 있습니다. 프로젝트의 자세한 내용은 이력서를 참고해주세요.
 ---
