--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -2,6 +2,7 @@
 layout: default
 modal-id: 3
 date: 2022-06-03
+githubLink: https://github.com/ash991213/Gaeki
 img: thumbnail3
 alt: image-alt
 project-date: June 2022
