--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -4,6 +4,7 @@ modal-id: 4
 date: 2022-09-01
 FrontLink: https://github.com/acentmeta/TEAM1-NFTunes-FE
 BackLink: https://github.com/acentmeta/TEAM1-NFTunes-BE
+stacks: Solidity, web3.js, redux-tool-kit, pinata-ipfs, docker, mongoDB, vercel
 videos: thumbnail4
 img: thumbnail4
 alt: image-alt
