--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -4,6 +4,7 @@ modal-id: 2
 date: 2022-04-11
 FrontLink: https://github.com/chi091/Team5-FRONT
 BackLink: https://github.com/chi091/Team5-BACK
+stacks: websocket, REST Api, jwt
 img: thumbnail2
 alt: image-alt
 project-date: April 2022
