--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -11,7 +11,7 @@ alt: image-alt
 project-date: 2022.09 ~ 2022.11
 client: MetaTrend
 title: NFTunes
-useStack: <div class="useStack"><strong>Solidity</strong><br /><p class="stackDesc">ERC-721 표준을 사용해 민팅, 판매, 경매 컨트랙트 제작.</p><br /><strong>redux-tool-kit</strong><br /><p class="stackDesc">metaMask 계정정보를 Store 에 담아 페이지 전역으로 State 관리함.</p><br /><strong>docker</strong><br /><p class="stackDesc">mongoDB, 블록체인 private-net 을 이미지로 제작해 개발단계에서 사용함.</p><br /><strong>mongoDB</strong><br /><p class="stackDesc">moongoose ODM 으로 no-sql Join 을 활용함.</p><br /><strong>vercel</strong><br /><p class="stackDesc">AWS 대신 serverless Function 을 사용함으로서 Front 빌드/배포 속도를 높임.</p><br /><strong>pinata-ipfs</strong><p class="stackDesc">음원 커버 이미지를 ipfs 로 등록함으로서, 서버 의존성을 줄이고, 토큰 이미지에 불변성을 부여함.</p><br /></div>
+useStack: <div class="useStack"><strong>Solidity</strong><p class="stackDesc">ERC-721 표준을 사용해 민팅, 판매, 경매 컨트랙트 제작.</p><strong>redux-tool-kit</strong><p class="stackDesc">metaMask 계정정보를 Store 에 담아 페이지 전역으로 State 관리함.</p><strong>docker</strong><p class="stackDesc">mongoDB, 블록체인 private-net 을 이미지로 제작해 개발단계에서 사용함.</p><strong>mongoDB</strong><p class="stackDesc">moongoose ODM 으로 no-sql Join 을 활용함.</p><strong>vercel</strong><p class="stackDesc">AWS 대신 serverless Function 을 사용함으로서 Front 빌드/배포 속도를 높임.</p><strong>pinata-ipfs</strong><p class="stackDesc">음원 커버 이미지를 ipfs 로 등록함으로서, 서버 의존성을 줄이고, 토큰 이미지에 불변성을 부여함.</p></div>
 description: 마지막으로 기업협약으로 진행한 학원 프로젝트인 dappTunes 입니다. 음원을 nft 토큰으로 치환하여, 음원재생으로 발생하는 수익을 토큰의 소유자가 100% 가져갈수 있도록 구상했습니다. 이력서에 기술된 모든 스택을 사용했으며, docker를 이용한 private network 개발구축, erc-721 표준을 사용해 토큰 제작/소거 를 가능하게 하는 등 사용할 수 있는 모든 기술로 만든 제일 자신있는 작업물이라 말씀드릴 수 있습니다. 프로젝트의 자세한 내용은 이력서를 참고해주세요.
 ---
 ````````````````
