--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -8,10 +8,10 @@ stacks: Solidity, web3.js, redux-tool-kit, pinata-ipfs, docker, mongoDB, vercel
 videos: thumbnail4
 img: thumbnail4
 alt: image-alt
-project-date: 2022.09 ~ 2022.11
+project-date: 2개월
 client: MetaTrend
 title: NFTunes
-useStack: <div class="useStack"><strong>Solidity</strong><p class="stackDesc">ERC-721 표준을 사용해 민팅, 판매, 경매 컨트랙트 제작.</p><strong>redux-tool-kit</strong><p class="stackDesc">metaMask 계정정보를 Store 에 담아 페이지 전역으로 State 관리함.</p><strong>docker</strong><p class="stackDesc">mongoDB, 블록체인 private-net 을 이미지로 제작해 개발단계에서 사용함.</p><strong>mongoDB</strong><p class="stackDesc">moongoose ODM 으로 no-sql Join 을 활용함.</p><strong>vercel</strong><p class="stackDesc">AWS 대신 serverless Function 을 사용함으로서 Front 빌드/배포 속도를 높임.</p><strong>pinata-ipfs</strong><p class="stackDesc">음원 커버 이미지를 ipfs 로 등록함으로서, 서버 의존성을 줄이고, 토큰 이미지에 불변성을 부여함.</p></div>
+useStack: <div class="useStack"><strong>redux-tool-kit</strong><p class="stackDesc">metaMask 계정정보를 Store 에 담아 페이지 전역으로 State 관리.</p><strong>docker</strong><p class="stackDesc">mongoDB, 블록체인 private-net 을 이미지로 제작해 개발단계에서 사용.</p><strong>vercel</strong><p class="stackDesc">AWS 대신 serverless Function 을 채택함으로서 Front 빌드/배포 속도향상.</p></div>
 description: MetaTrend 에게 요구사항을 받아 제작한 기업협약 프로젝트입니다.<br />음원을 NFT 토큰으로 민팅해, 음원의 소유권을 토대로, 수수료가 적게되는 수익을 발생시키는 것이 주 목적인 프로젝트입니다.<br />음원 토큰의 민팅, 판매, 경매가 가능했고, 구독 여부에 따라, 음원의 재생이 가능하도록 만들었습니다. 
 ---
 ````````````````
