--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -10,5 +10,5 @@ project-date: 1주
 client: Academy
 title: CRUD
 useStack: <div class="useStack"><strong>node.JS, express</strong><p class="stackDesc">로그인/로그아웃, CRUD 의 db 전송을 담당하는 백서버 구축.</p><strong>mySQL</strong><p class="stackDesc">웹에서 받은 유저/글 정보를 저장하는 DB 구축.</p></div>
-description: 프로젝트의 목적은 게시판, 로그인 기능이 있는 CRUD 페이지입니다.<br/>첫 팀장을 맡고 부족한 점과 필요한 점을 배운 중요한 프로젝트였습니다.
+description: 프로젝트의 목적은 게시판, 로그인 기능이 있는 CRUD 페이지입니다.<br/>첫 팀장을 맡고 부족한 점과 필요한 점을 배운 중요한 프로젝트.
 ---
